# pathology-ml-model-training

./: .gitignore  .gitmodules  CREDITS.txt  LICENSE.txt  README.md  User Guide: Annotation Modes.md  User Guide: Model Training and Application.md
src/: CMakeLists.txt  fonts.qrc  image-archive-analytics-platform.pro  images.qrc  luminosus-microscopy.pro  main.cpp  qml.qrc
src/microscopy/: dependencies.cmake  microscopy.pri  microscopy.qrc
src/microscopy/blocks/: ArtificialTrainingDataBlock.cpp  ArtificialTrainingDataBlock.h  ArtificialTrainingDataBlock.qml  NucleiDataBlock.cpp  NucleiDataBlock.h  NucleiDataBlock.qml  NucleiPlotBlock.cpp  NucleiPlotBlock.h  NucleiPlotBlock.qml  NucleiVisualizationBlock.cpp  NucleiVisualizationBlock.h  NucleiVisualizationBlock.qml  TissueChannelBlock.cpp  TissueChannelBlock.h  TissueChannelBlock.qml  TissueViewerBlock.cpp  TissueViewerBlock.h  TissueViewerBlock.qml  TrainingDataBlock.qml  TrainingDataOldBlock.cpp  TrainingDataOldBlock.h
src/microscopy/blocks/actions/: ClusteringBlock.cpp  ClusteringBlock.h  ClusteringBlock.qml  CsvExportBlock.cpp  CsvExportBlock.h  CsvExportBlock.qml  DbscanBlock.cpp  DbscanBlock.h  DbscanBlock.qml  DimensionalityReductionBlock.cpp  DimensionalityReductionBlock.h  DimensionalityReductionBlock.qml  FeatureSetterBlock.cpp  FeatureSetterBlock.h  FeatureSetterBlock.qml  HdbscanBlock.cpp  HdbscanBlock.h  HdbscanBlock.qml  UmapBlock.cpp  UmapBlock.h  UmapBlock.qml
src/microscopy/blocks/ai/: AutoAiSegmentationBlock.cpp  AutoAiSegmentationBlock.h  AutoAiSegmentationBlock.qml  AutoencoderInferenceBlock.cpp  AutoencoderInferenceBlock.h  AutoencoderInferenceBlock.qml  AutoencoderTrainingBlock.cpp  AutoencoderTrainingBlock.h  AutoencoderTrainingBlock.qml  CellAreaAverageBlock.cpp  CellAreaAverageBlock.h  CellAreaAverageBlock.qml  CellDatabaseComparison.cpp  CellDatabaseComparison.h  CellDatabaseComparison.qml  CellRendererBlock.cpp  CellRendererBlock.h  CellRendererBlock.qml  CenterRenderer.qml  CnnInferenceBlock.cpp  CnnInferenceBlock.h  CnnInferenceBlock.qml  CnnModelBlock.cpp  CnnModelBlock.h  CnnModelBlock.qml  CnnTrainingBlock.cpp  CnnTrainingBlock.h  CnnTrainingBlock.qml  DapiRenderer.qml  ElongatedRenderer.qml  FeatureRenderer.qml  FindCentersBlock.cpp  FindCentersBlock.h  FindCentersBlock.qml  InputDataPreprocessing.qml  LabelRenderer.qml  LamiRenderer.qml  MarkerBasedRegionGrowBlock.cpp  MarkerBasedRegionGrowBlock.h  MarkerBasedRegionGrowBlock.qml  (+13 more)
src/microscopy/blocks/basic/: CellDatabaseBlock.cpp  CellDatabaseBlock.h  CellDatabaseBlock.qml  DataViewBlock.cpp  (+17 more)
src/microscopy/dbscan/: dbscan.cpp
src/microscopy/dkm/: dkm_parallel.h
src/microscopy/hdbscan/: EuclideanDistance.cpp  EuclideanDistance.hpp  ManhattanDistance.cpp  ManhattanDistance.hpp  bitSet.cpp  bitSet.hpp  cluster.cpp  hdbscanAlgorithm.cpp  hdbscanAlgorithm.hpp  hdbscanConstraint.hpp  hdbscanParameters.hpp  hdbscanResult.cpp  hdbscanResult.hpp  hdbscanRunner.cpp  hdbscanRunner.hpp  outlierScore.hpp  undirectedGraph.hpp
src/microscopy/manager/: BackendManager.cpp  BackendManager.h  ViewManager.cpp  ViewManager.h
src/microscopy/multicore_tsne/: CMakeLists.txt  tsne.cpp  tsne.h  vptree.h
src/microscopy/ui/: grayscale16_tissue_shader.frag  grayscale16_tissue_shader_alpha_blended.frag  noise_shader.frag  rgb8_tissue_shader.frag  rgb8_tissue_shader_alpha_blended.frag
src/qsyncable/: qsuuid.cpp  qsyncable.pri
src/ui/: main.qml
src/ui/app/: BlockListCategory.qml  BlockListDrawerContent.qml  BlockListEntry.qml  BlockSettingsDrawerContent.qml  CellVisualizationUi.qml  CombinationEntry.qml  DataView.qml  DataViewLoader.qml  DataViewTouchController.qml  DrawerContent.qml  DrawerTabButton.qml  ExportProjectDialog.qml  ImportProjectDialog.qml  ProjectsDrawerContent.qml  RectangularAreaUi.qml  SettingsDrawerContent.qml  StatusList.qml  TissueChannelUi.qml  TissueView.qml  TissueViewLoader.qml  TissueViewTouchController.qml  WorkspacePlaneTouchController.qml
src/ui/settings/: AboutSection.qml  BackendSettings.qml  GuiSettings.qml  SettingsCategory.qml  WebsocketSettings.qml
(+51 files in other folders)
